; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_PrintSupportedIntents.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_PrintSupportedIntents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"Supported intents:\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"\09%u - %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PrintSupportedIntents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PrintSupportedIntents() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca [200 x i64], align 16
  %4 = alloca [200 x i8*], align 16
  %5 = call i32 (...) @DbgThread()
  %6 = getelementptr inbounds [200 x i64], [200 x i64]* %3, i64 0, i64 0
  %7 = getelementptr inbounds [200 x i8*], [200 x i8*]* %4, i64 0, i64 0
  %8 = call i64 @cmsGetSupportedIntents(i32 %5, i32 200, i64* %6, i8** %7)
  store i64 %8, i64* %1, align 8
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %2, align 8
  br label %10

10:                                               ; preds = %22, %0
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* %1, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %10
  %15 = load i64, i64* %2, align 8
  %16 = getelementptr inbounds [200 x i64], [200 x i64]* %3, i64 0, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %2, align 8
  %19 = getelementptr inbounds [200 x i8*], [200 x i8*]* %4, i64 0, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i64 %17, i8* %20)
  br label %22

22:                                               ; preds = %14
  %23 = load i64, i64* %2, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %2, align 8
  br label %10

25:                                               ; preds = %10
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i64 @cmsGetSupportedIntents(i32, i32, i64*, i8**) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
